# CMPLXFOIL

./: meson.build  pyproject.toml  setup.py  setup_deprecated.py
.github/workflows/: ci.yml  ci_cd.yml
cmplxfoil/: CMPLXFOIL.py  __init__.py  _version.py
doc/: install.rst
tools/: cibw_before_build_linux.sh
